# finance-reporter

./: .dockerignore  .gitignore  DOCS.md  Dockerfile  README.md  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  gitleaks.yml
backend/: .env.example  auth.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/data/: budget.csv
backend/docs/: insight_taxonomy.md
backend/routers/: actions.py  analyst.py  budget.py  cashflow.py  categories.py  chat.py  demo.py  feature_interest.py  goals.py  insights.py  ledger.py  pnl.py  subscriptions.py  upload.py
backend/sdk/: __init__.py  budget.py  cashflow.py  categories.py  chat_tools.py  csv_handler.py  goals.py  insights.py  ledger.py  ledger_scope.py  merchant_cancellation_directory.json  merchant_directory.py  next_actions.py  pdf_parser.py  semantics.py  subscriptions.py  year_detection.py
backend/tests/: test_analyst_ledger_csv.py  test_api_integration.py  test_auth.py  test_cashflow.py  test_categories_endpoint.py  test_chat_tools.py  test_feature_interest.py  test_goal_allocation.py  test_goals_api.py  test_insights.py  test_ledger.py  test_next_actions.py  test_pdf_parser.py  test_session_isolation.py  test_subscriptions.py  test_upload.py  test_year_detection.py
docs/: auth-cognito-mvp.md  aws-mvp-readiness.md  feature5-action-feed-tuning.md  spending-donut-spec.md
frontend/: .env.example  biome.json  index.html  package-lock.json  package.json
infra/: cognito-hosted-ui.css
tasks/: lessons.md
(+94 files in other folders)
