[project]
name = "pnl-reporter-backend"
version = "1.0.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "B008",   # function-call-in-default-argument — needed for FastAPI Depends/File/Cookie
  "B905",   # zip-without-explicit-strict — pandas zip patterns
  "RUF005", # collection-literal-concatenation — readability preference
]

[tool.ruff.format]
quote-style = "double"
